Add video player task

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <main>
   <h1>Accessibility workshop</h1>
 
-  <p>Solve the following tasks in order:</p>
+  <p>Solve the following tasks:</p>
 
   <table>
     <tr>
@@ -28,11 +28,7 @@
     </tr>
     <tr>
       <td>Task 3</td>
-      <td><a href="task3">Task list</a></td>
-    </tr>
-    <tr>
-      <td>Task 4</td>
-      <td><a href="task4">Video player</a></td>
+      <td><a href="task3">Video player</a></td>
     </tr>
   </table>
 </main>
