--- a/task2/index.html
+++ b/task2/index.html
@@ -8,7 +8,7 @@
   <title>Button with dialog</title>
 
   <link rel="stylesheet" href="../node_modules/marx-css/css/marx.min.css">
-  <link rel="stylesheet" href="../common/style.css">
+  <link rel="stylesheet" href="../common/styles/common.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,6 +24,7 @@
     Select your job
   </button>
 
+  <!-- Dialog -->
   <div id="dialog" class="hidden">
     <h2>Select your job</h2>
 
