--- a/task3/index.html
+++ b/task3/index.html
@@ -9,7 +9,7 @@
 
   <link rel="stylesheet" href="../node_modules/marx-css/css/marx.min.css">
   <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
-  <link rel="stylesheet" href="../common/style.css">
+  <link rel="stylesheet" href="../common/styles/common.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,23 +18,29 @@
   <h1>Video player</h1>
 
   <div class="video-player">
+    <!-- Video -->
     <video id="video1">
       <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
       <source src="https://www.w3schools.com/html/mov_bbb.ogg" type="video/ogg">
       Your browser does not support HTML5 video.
     </video>
 
+    <!-- Toolbar -->
     <div class="toolbar">
+      <!-- Play/pause and mute-buttons -->
       <button id="play-pause-button" class="fa fa-play"></button>
       <button id="mute-button" class="fa fa-volume-up"></button>
 
+      <!-- Slider -->
       <div class="rail">
         <span tabindex="0" class="slider"></span>
       </div>
 
-      <span class="playback-rate dropdown">
+      <!-- Playback rate dropdown menu -->
+      <div class="playback-rate dropdown">
         <button id="playback-rate-button" class="dropbtn fa fa-running"></button>
 
+        <!-- hidden menu -->
         <div class="menu hidden">
           <a class="menuitem" href="#" data-playback-rate="0.5">0.5</a>
           <a class="menuitem" href="#" data-playback-rate="0.75">0.75</a>
@@ -42,7 +48,7 @@
           <a class="menuitem" href="#" data-playback-rate="1.5">1.5</a>
           <a class="menuitem" href="#" data-playback-rate="2">2.0</a>
         </div>
-    </span>
+      </div>
     </div>
   </div>
 </main>
