Remove identifying headers for task 1

--- a/task1/index.html
+++ b/task1/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Tab panel</title>
+  <title>Task 1</title>
 
   <link rel="stylesheet" href="../node_modules/marx-css/css/marx.min.css">
   <link rel="stylesheet" href="../common/styles/common.css">
@@ -14,7 +14,7 @@
 
 <body>
 <main>
-  <h1>Tab panel</h1>
+  <h1>Task 1</h1>
 
   <div id="tab-panel" class="tabs">
     <!-- Tab list -->
