Update ids and names for task1

--- a/task1/index.html
+++ b/task1/index.html
@@ -19,23 +19,23 @@
   <div id="tab-panel" class="tabs">
     <!-- Tab list -->
     <ul class="tablist ul-horizontal">
-      <li class="tab selected" data-tab-show="tab-1">Design</li>
-      <li class="tab" data-tab-show="tab-2">Develop</li>
-      <li class="tab" data-tab-show="tab-3">Deploy</li>
+      <li id="tab-1" class="tab selected" data-tab-show="tabpanel-1">Design</li>
+      <li id="tab-2" class="tab" data-tab-show="tabpanel-2">Develop</li>
+      <li id="tab-3" class="tab" data-tab-show="tabpanel-3">Deploy</li>
     </ul>
 
     <!-- Tab panels -->
-    <div id="tab-1" class="tabpanel">
+    <div id="tabpanel-1" class="tabpanel">
       <h3>Design</h3>
       <img src="../common/images/undraw_designer_girl.svg" />
     </div>
 
-    <div id="tab-2" class="tabpanel hidden">
+    <div id="tabpanel-2" class="tabpanel hidden">
       <h3>Develop</h3>
       <img src="../common/images/undraw_hello.svg" />
     </div>
 
-    <div id="tab-3" class="tabpanel hidden">
+    <div id="tabpanel-3" class="tabpanel hidden">
       <h3>Deploy</h3>
       <img src="../common/images/undraw_maintenance.svg" />
     </div>
