Replace h3 with description for task 1

--- a/task1/index.html
+++ b/task1/index.html
@@ -26,17 +26,17 @@
 
     <!-- Tab panels -->
     <div id="tabpanel-1" class="tabpanel">
-      <h3>Design</h3>
+      <p>A designer creates the look and flow of a web page.</p>
       <img src="../common/images/undraw_designer_girl.svg" />
     </div>
 
     <div id="tabpanel-2" class="tabpanel hidden">
-      <h3>Develop</h3>
+      <p>A developer uses magic to realize the design.</p>
       <img src="../common/images/undraw_hello.svg" />
     </div>
 
     <div id="tabpanel-3" class="tabpanel hidden">
-      <h3>Deploy</h3>
+      <p>Operations puts the web page on a server.</p>
       <img src="../common/images/undraw_maintenance.svg" />
     </div>
   </div>
