Change base class to tab-panel-default in task 1

--- a/task1/index.html
+++ b/task1/index.html
@@ -16,7 +16,7 @@
 <main>
   <h1>Task 1</h1>
 
-  <div id="tab-panel" class="tabs">
+  <div id="tab-panel" class="tab-panel-default">
     <!-- Tab list -->
     <ul class="tablist ul-horizontal">
       <li id="tab-1" class="tab selected" data-tab-show="tabpanel-1">Design</li>
