Added useful resources

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>UU Workshop</title>
 
   <link rel="stylesheet" href="node_modules/marx-css/css/marx.min.css">
+  <link rel="stylesheet" href="common/styles/common.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -31,6 +32,15 @@
       <td><a href="task3">Video player</a></td>
     </tr>
   </table>
+
+  <h6>Useful material:</h6>
+
+  <ul class="ul-unstyled">
+    <li><a href="https://www.w3.org/WAI/WCAG21/quickref/?versions=2.1&currentsidebar=%23col_customize&showtechniques=312&levels=aaa&technologies=smil%2Cpdf%2Cflash%2Csl">WCAG 2.1 AA</a></li>
+    <li><a href="https://www.w3.org/TR/wai-aria-practices-1.1/">WAI ARIA Widgets</a></li>
+    <li><a href="https://www.w3.org/TR/wai-aria-1.0/roles">WAI ARIA roles</a></li>
+    <li><a href="https://www.w3.org/TR/wai-aria-1.0/states_and_properties">WAI ARIA states and properties</a></li>
+  </ul>
 </main>
 </body>
 </html>
