Add secondary button style

--- a/task2/index.html
+++ b/task2/index.html
@@ -51,7 +51,7 @@ Optionally, the aria-describedby property is set on the element with the dialog 
       </form>
 
       <button id="button-dialog-select" class="disabled">Select</button>
-      <button id="button-dialog-close">Close</button>
+      <button id="button-dialog-close" class="button-secondary">Close</button>
     </div>
   </div>
 </main>
