--- a/task3/index.html
+++ b/task3/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Video player</title>
+  <title>Bunny</title>
 
   <link rel="stylesheet" href="../node_modules/marx-css/css/marx.min.css">
   <link rel="stylesheet" href="../node_modules/@fortawesome/fontawesome-free/css/all.min.css">
@@ -15,7 +15,7 @@
 
 <body>
 <main>
-  <h1>Video player</h1>
+  <h1>Bunny</h1>
 
   <div class="video-player">
     <!-- Video -->
