--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
   <h6>Useful material:</h6>
 
   <ul class="ul-unstyled">
-    <li><a href="https://www.w3.org/WAI/WCAG21/quickref/?versions=2.1&currentsidebar=%23col_customize&showtechniques=312&levels=aaa&technologies=smil%2Cpdf%2Cflash%2Csl">WCAG 2.1 AA</a></li>
-    <li><a href="https://www.w3.org/TR/wai-aria-practices-1.1/">WAI ARIA Widgets</a></li>
+    <li><a href="https://www.w3.org/WAI/ARIA/apg/patterns/">ARIA Authoring Practices Guide</a></li>
+    <li><a href="https://www.uutilsynet.no/veiledning/nettsteder/711">UU for nettstedet hos uutilsynet</a></li>
+    <li><a href="https://www.w3.org/WAI/WCAG21/quickref/">WCAG Quickref</a></li>
+    <li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">MDN - HTML elements reference</a></li>
     <li><a href="https://www.w3.org/TR/wai-aria-1.0/roles">WAI ARIA roles</a></li>
     <li><a href="https://www.w3.org/TR/wai-aria-1.0/states_and_properties">WAI ARIA states and properties</a></li>
   </ul>
